<resources>
    <string name="app_name">machineTestApp10x</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password">Password</string>
    <string name="enter_your_email">enter your email</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or_signin_with">Or signin with</string>
    <string name="don_t_have_an_account">Don\'t have an Account</string>
    <string name="user_list">User List</string>
    <string name="view_profile">View Profile</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="user_name">User Name</string>
</resources>