<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="8dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_for_recycler_view"
        android:paddingVertical="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/first_name"
            android:textColor="@color/_212226"
            android:textFontWeight="900"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/last_name"
            android:textColor="@color/_212226"
            android:textFontWeight="900"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@id/tvFirstName"
            app:layout_constraintTop_toTopOf="@+id/tvFirstName" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/email"
            android:textColor="@color/_212226"
            android:textFontWeight="900"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLastName" />

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/phone"
            android:textColor="@color/_212226"
            android:textFontWeight="900"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvEmail"
            app:layout_constraintStart_toEndOf="@+id/tvEmail"
            app:layout_constraintTop_toTopOf="@+id/tvEmail" />

        <TextView
            android:id="@+id/tvViewProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/bg_for_view_profile_blue"
            android:paddingHorizontal="10dp"
            android:paddingVertical="8dp"
            android:text="@string/view_profile"
            android:textColor="@color/blue007AFF"
            android:textFontWeight="500"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvPhone"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toTopOf="@+id/tvLastName" />\|

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>